--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=intelligent_college_timetable_scheduler
-DB_USERNAME=grad
-DB_PASSWORD=123456
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
