--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,11 @@
         "php": "^8.0.2",
         "backpack/crud": "^5.4",
         "box/spout": "^3.3",
+        "dompdf/dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.5",
+        "knplabs/knp-snappy": "^1.4",
         "laravel/framework": "^9.19",
+        "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "maatwebsite/excel": "*",
