Added the lecture timetable script linking to the python script , edited the lecture timetable database , edited the upload students results to work properly with courses that doesn't have lab or section , edited the admit students results to show the students that needs 4~1 degrees to success

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "@prettier/plugin-php": "^0.19.6",
         "chart.js": "^4.2.1",
+        "prettier": "^2.8.8",
         "sweetalert2": "^11.7.12"
     }
 }
